--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,9 +1,9 @@
 name: cypress-typescript-webpack
 
-on: 
+on:
   push:
   schedule:
-    - cron: '0 0 1-31/2 * *' 
+    - cron: '0 0 1-31/2 * *'
 
 jobs:
   build:
@@ -16,12 +16,14 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: '12.x'
-    - name: npm install
+    - name: INSTALL
       run: |
         npm ci
       env:
         CI: true
-    - name: lint and e2e test
+    - name: LINT
       run: |
         npm run lint
+    - name: TEST
+      run: |
         npm run test-ci
