--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "cypress-typescript-webpack",
   "version": "1.0.0",
-  "description": "cypress end-to-end test automation boilerplate project. Using TypeScript and webpack.",
+  "description": "cypress end-to-end test automation boilerplate, using TypeScript and webpack.",
   "scripts": {
-    "clean:video": "npx rimraf cypress/videos/*",
-    "clean:screenshots": "npx cypress/screenshots/*",
+    "pretty": "npx prettier --no-config './cypress/**/*.ts' --write",
+    "lint": "npx tslint -c tslint.json './cypress/integration/*.ts'",
     "open": "npx cypress open",
     "test": "npx cypress run",
     "test-ci": "npx cypress run --headless",
-    "lint": "npx tslint -c tslint.json './cypress/integration/*.ts'",
-    "pretty": "npx prettier --no-config './cypress/**/*.ts' --write"
+    "clean:video": "npx rimraf cypress/videos/*",
+    "clean:screenshots": "npx cypress/screenshots/*"
   },
   "keywords": [
     "cypress",
