--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)",
+  "author": "",
   "description": "cypress end-to-end test automation boilerplate, using TypeScript and webpack.",
   "devDependencies": {
     "@cypress/webpack-preprocessor": "4.1.2",
@@ -19,12 +19,7 @@
     }
   },
   "keywords": [
-    "boilerplate",
     "cypress",
-    "e2e",
-    "e2e tests",
-    "example",
-    "integration test",
     "typescript",
     "webpack"
   ],
