--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "author": "",
-  "description": "cypress end-to-end test automation boilerplate, using TypeScript and webpack.",
+  "author": "Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)",
+  "description": "cypress end-to-end test automation boilerplate.",
   "devDependencies": {
     "@cypress/webpack-preprocessor": "4.1.2",
     "cypress": "4.0.2",
@@ -19,7 +19,12 @@
     }
   },
   "keywords": [
+    "boilerplate",
     "cypress",
+    "e2e",
+    "e2e tests",
+    "example",
+    "integration test",
     "typescript",
     "webpack"
   ],
