--- a/package.json
+++ b/package.json
@@ -1,53 +1,1 @@
-{
-  "author": "Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)",
-  "description": "cypress end-to-end test automation boilerplate.",
-  "devDependencies": {
-    "@cypress/webpack-preprocessor": "4.1.2",
-    "cypress": "4.0.2",
-    "husky": "4.2.3",
-    "lint-staged": "10.0.8",
-    "prettier": "1.19.1",
-    "ts-loader": "6.2.1",
-    "tslint": "5.20.1",
-    "tslint-config-prettier": "1.18.0",
-    "typescript": "3.8.3",
-    "webpack": "4.42.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "keywords": [
-    "boilerplate",
-    "cypress",
-    "e2e",
-    "e2e tests",
-    "example",
-    "integration test",
-    "typescript",
-    "webpack"
-  ],
-  "license": "MIT",
-  "lint-staged": {
-    "*.{ts,js,css,json,md}": [
-      "prettier --write",
-      "git add"
-    ]
-  },
-  "name": "cypress-typescript-webpack",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/e2e-boilerplates/cypress-typescript-webpack.git"
-  },
-  "scripts": {
-    "clean:screenshots": "npx cypress/screenshots/*",
-    "clean:video": "npx rimraf cypress/videos/*",
-    "lint": "npx tslint -c tslint.json './cypress/integration/*.ts'",
-    "open": "npx cypress open",
-    "pretty": "npx prettier --no-config './cypress/**/*.ts' --write",
-    "test": "npx cypress run",
-    "test:ci": "npx cypress run --headless"
-  },
-  "version": "1.0.0"
-}
+{"author":"Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)","bugs":{"url":"https://github.com/e2e-boilerplate/cypress-typescript-webpack-chai-should/issues"},"description":"Cypress end-to-end test automation boilerplate. using Using TypeScript, Webpack, Chai and Should.","devDependencies":{"@cypress/webpack-preprocessor":"4.1.2","cypress":"4.0.2","husky":"4.2.3","lint-staged":"10.0.8","prettier":"1.19.1","ts-loader":"6.2.1","tslint":"5.20.1","tslint-config-prettier":"1.18.0","typescript":"3.8.3","webpack":"4.42.0"},"homepage":"https://github.com/e2e-boilerplate/cypress-typescript-webpack-chai-should#readme","husky":{"hooks":{"pre-commit":"lint-staged"}},"keywords":["boilerplate","chai","cypress","e2e","e2e tests","example","integration test","should","typescript","webpack"],"license":"MIT","lint-staged":{"*.{ts,js,css,json,md}":["prettier --write","git add"]},"name":"cypress-typescript-webpack-chai-should","repository":{"type":"git","url":"git+https://github.com/e2e-boilerplate/cypress-typescript-webpack-chai-should.git"},"scripts":{"clean:screenshots":"npx cypress/screenshots/*","clean:video":"npx rimraf cypress/videos/*","lint":"npx tslint -c tslint.json './cypress/integration/*.ts'","open":"npx cypress open","pretty":"npx prettier --no-config './cypress/**/*.ts' --write","test":"npx cypress run","test:ci":"npx cypress run --headless"},"version":"1.0.0"}
