--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "author": "Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)",
+  "author": "",
   "bugs": {
     "url": "https://github.com/e2e-boilerplate/cypress-typescript-webpack-chai-should/issues"
   },
-  "description": "Cypress end-to-end test automation boilerplate. Using Using TypeScript, Webpack, Chai and Should.",
+  "description": "Cypress end-to-end test automation boilerplate. using TypeScript, Webpack, Chai and Should.",
   "devDependencies": {
     "@cypress/webpack-preprocessor": "4.1.2",
     "cypress": "4.0.2",
@@ -23,13 +23,8 @@
     }
   },
   "keywords": [
-    "boilerplate",
     "chai",
     "cypress",
-    "e2e",
-    "e2e tests",
-    "example",
-    "integration test",
     "should",
     "typescript",
     "webpack"
