--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "",
+  "author": "Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)",
   "bugs": {
     "url": "https://github.com/e2e-boilerplate/cypress-typescript-webpack-chai-should/issues"
   },
@@ -23,8 +23,13 @@
     }
   },
   "keywords": [
+    "boilerplate",
     "chai",
     "cypress",
+    "e2e",
+    "e2e tests",
+    "example",
+    "integration test",
     "should",
     "typescript",
     "webpack"
