--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
   "license": "MIT",
   "lint-staged": {
     "*.{ts,js,css,json,md}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "name": "cypress-typescript-webpack-chai-should",
