--- a/package.json
+++ b/package.json
@@ -54,5 +54,6 @@
     "test": "npx cypress run",
     "test:ci": "npx cypress run --headless"
   },
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "dependencies": {}
 }
