--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
     "strict": true,
-    "baseUrl": "../node_modules",
-    "target": "es5",
-    "lib": ["es5", "dom"],
-    "types": ["cypress"]
-  },
-  "include": ["**/*.ts"]
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "lib": ["dom"],
+    "types": ["node", "chai", "cypress"],
+    "typeRoots": ["node_modules/@types"],
+    "target": "es5"
+  }
 }
