--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -2,7 +2,7 @@ name: cypress-typescript-webpack-chai-should
 'on':
   push: null
   schedule:
-    - cron: 40 4 1-31/2 * *
+    - cron: 20 2 1-31/2 * *
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,4 +20,4 @@ jobs:
       - name: Build
         run: npm run build --if-present
       - name: Executing tests
-        run: 'npm run test:ci'
+        run: npm run test -- --headless
