--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "",
+  "author": "Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)",
   "bugs": {
     "url": "https://github.com/e2e-boilerplate/cypress-typescript-webpack-chai-should/issues"
   },
@@ -21,7 +21,7 @@
     "eslint-plugin-cypress": "2.10.3",
     "husky": "4.2.3",
     "lint-staged": "10.0.8",
-    "prettier": "1.19.1",
+    "prettier": "2.0.1",
     "tslint": "6.1.0",
     "tslint-config-prettier": "1.18.0",
     "tslint-plugin-prettier": "2.2.0"
@@ -33,8 +33,13 @@
     }
   },
   "keywords": [
+    "boilerplate",
     "chai",
     "cypress",
+    "e2e",
+    "e2e tests",
+    "example",
+    "integration test",
     "should",
     "typescript",
     "webpack"
