--- a/package.json
+++ b/package.json
@@ -10,18 +10,13 @@
     "ts-loader": "6.2.1",
     "typescript": "3.8.3"
   },
-  "description": "Cypress end-to-end test automation boilerplate. using TypeScript, Webpack, Chai and Should.",
+  "description": "Cypress end-to-end test automation boilerplate. Using TypeScript, Webpack, Chai and Should.",
   "devDependencies": {
-    "@types/jasmine": "3.5.9",
-    "@types/jasminewd2": "2.0.8",
-    "@types/jest": "25.1.4",
-    "@types/mocha": "7.0.2",
-    "@types/puppeteer": "2.0.1",
-    "@types/selenium-webdriver": "4.0.9",
+    "@types/chai": "4.2.11",
     "eslint-plugin-cypress": "2.10.3",
     "husky": "4.2.3",
     "lint-staged": "10.0.8",
-    "prettier": "2.0.1",
+    "prettier": "1.19.1",
     "tslint": "6.1.0",
     "tslint-config-prettier": "1.18.0",
     "tslint-plugin-prettier": "2.2.0"
