--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)",
+  "author": "Girma Nigusse <xgirma@gmail.com>",
   "bugs": {
     "url": "https://github.com/e2e-boilerplate/cypress-typescript-webpack-chai-should/issues"
   },
@@ -7,7 +7,7 @@
     "@cypress/webpack-preprocessor": "4.1.2",
     "cypress": "4.2.0",
     "rimraf": "3.0.2",
-    "ts-loader": "6.2.2",
+    "ts-loader": "6.2.1",
     "typescript": "3.8.3"
   },
   "description": "Cypress end-to-end test automation boilerplate. Using TypeScript, Webpack, Chai and Should.",
