--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Girma Nigusse <xgirma@gmail.com> (https://github.com/xgirma)",
+  "author": "Girma Nigusse <xgirma@gmail.com>",
   "bugs": {
     "url": "https://github.com/e2e-boilerplate/cypress-typescript-webpack-chai-should/issues"
   },
@@ -16,7 +16,7 @@
     "eslint-plugin-cypress": "2.10.3",
     "husky": "4.2.3",
     "lint-staged": "10.0.8",
-    "prettier": "2.0.2",
+    "prettier": "1.19.1",
     "tslint": "6.1.0",
     "tslint-config-prettier": "1.18.0",
     "tslint-plugin-prettier": "2.2.0"
