--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,17 +3,9 @@
     "strict": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "lib": [
-      "dom"
-    ],
-    "types": [
-      "node",
-      "chai",
-      "cypress"
-    ],
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "lib": ["dom", "es2015"],
+    "types": ["cypress", "chai"],
+    "typeRoots": ["node_modules/@types"],
     "target": "es5"
   }
 }
