--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "prettier": "2.0.2",
     "tslint": "6.1.0",
     "tslint-config-prettier": "1.18.0",
-    "tslint-plugin-prettier": "2.3.0"
+    "tslint-plugin-prettier": "2.3.0",
+    "webpack-cli": "3.3.11"
   },
   "homepage": "https://github.com/e2e-boilerplate/cypress-typescript-webpack-chai-should#readme",
   "husky": {
