--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "cypress": "4.3.0",
     "rimraf": "3.0.2",
     "ts-loader": "6.2.2",
-    "typescript": "3.8.3"
+    "typescript": "3.8.3",
+    "webpack": "4.42.1"
   },
   "description": "Cypress end-to-end test automation boilerplate. Using TypeScript, Webpack, Chai and Should.",
   "devDependencies": {
@@ -19,7 +20,8 @@
     "prettier": "2.0.2",
     "tslint": "6.1.0",
     "tslint-config-prettier": "1.18.0",
-    "tslint-plugin-prettier": "2.3.0"
+    "tslint-plugin-prettier": "2.3.0",
+    "webpack-cli": "3.3.11"
   },
   "homepage": "https://github.com/e2e-boilerplate/cypress-typescript-webpack-chai-should#readme",
   "husky": {
