--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "cypress": "4.5.0",
     "rimraf": "3.0.2",
     "ts-loader": "6.2.2",
+    "tsify": "4.0.1",
     "typescript": "3.9.2",
     "webpack": "4.43.0"
   },
   "description": "Cypress end-to-end test automation boilerplate. Using TypeScript, Webpack, Chai and Should.",
   "devDependencies": {
     "@types/chai": "4.2.11",
-    "eslint-plugin-cypress": "2.10.3",
+    "@types/cypress-cucumber-preprocessor": "1.14.1",
     "husky": "4.2.5",
     "lint-staged": "10.2.2",
     "prettier": "2.0.4",
