--- a/package.json
+++ b/package.json
@@ -31,16 +31,17 @@
     }
   },
   "keywords": [
-    "boilerplate",
     "chai",
     "cypress",
-    "e2e",
-    "e2e tests",
-    "example",
-    "integration test",
     "should",
     "typescript",
-    "webpack"
+    "webpack",
+    "e2e",
+    "e2e tests",
+    "boilerplate",
+    "integration test",
+    "test automation",
+    "javascript"
   ],
   "license": "MIT",
   "lint-staged": {
