--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
   "keywords": [
     "chai",
     "cypress",
+    "cypress automation",
+    "cypress boilerplate",
+    "cypress example",
     "should",
     "typescript",
     "webpack",
